# jc_toolkit_mac

./: .gitignore  CMakeLists.txt  README.txt
jctool/: hid.c  jctool.cpp  jctool.vs2017.vcxproj  tasks.json
